# graphRC

./: CITATION.cff  README.md  pyproject.toml
examples/: example.ipynb  threshold_optimization.txt  threshold_tuning.py  tune_thresholds.py
examples/data/: ambh.out  ambh.v000.xyz  atrop.v000.xyz  cpa.v000.xyz  cycl.v000.xyz  dihedral.v000.xyz  expected_results.py  inversion.v000.xyz  mn-hy.v000.xyz  ru-co-nuc.v000.xyz  ru-co.v000.xyz  sn2.v000.xyz  spiro-ts1.v000.xyz  spiro-ts2.v000.xyz  thia-ma.v000.xyz
src/graphrc/: __init__.py  api.py  characterize.py  cli.py  config.py  convert.py  core.py  graph_compare.py  output.py  utils.py
src/vib_analysis/: __init__.py  api.py  characterize.py  cli.py  config.py  convert.py  core.py  data_loader.py  graph_compare.py  output.py  utils.py
tests/: __init__.py  test_api.py
vib_analysis/: cli.py  convert.py  core.py
