[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphRC"
version = "1.3.5"
description = "Internal Coordinate Analysis of Vibrational Modes."
authors = [{name = "Dr Alister Goodfellow"}]
readme = "README.md"  
requires-python = ">=3.8" 
dependencies = [
    "numpy",
    "cclib",
    "networkx",
    "xyzgraph"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/aligfellow/graphRC"

[project.scripts]
graphrc = "graphrc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
